Started coding the welcome and main game form

--- a/Group_Project/MainGameForm.resx
+++ b/Group_Project/MainGameForm.resx
@@ -120,8 +120,174 @@
   <metadata name="imageListBackground.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="imageListBackground.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACG
+        DQAAAk1TRnQBSQFMAgEBBQEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAAiIBSwF0AVgBWQN6
+        A1kBegF1AXkBdDAAASIBIwFFAVkBegHlAaAC5QJ6AVkDegFSMAABIgEjAUsBUgLlAaAB5QZ6AVkBejAA
+        AiIBTAFTA+UBmgGZAXQB7QHsAXQCeQFvMAABIgEjAUwBcwPlAXoBdAEDBUoBRDAAASIBSwFTAVkC5QFY
+        AXQBSwFFAUoBIwNEASMwAAEiASMBSwFRAXoBdAFRAXQBUQFLASMERAEjMAABCwEiASMBSwF6AXkBegGg
+        AXoBSwJEASIBRAESAUowAAELASIBIwFKAVMBUgF1AXQBUwFFAUsBRAEiAW4CIzAAASIBIwFMAUsBdAFS
+        AUwBSwF0AUsBSgEjAkQCIjAAASIBIwFSAXQBUgF1AVIBSwFFAUsBbQFEAiICCzAAASIBIwFMAUUBTAF6
+        AUsBRAFKAUsDRAEiAgswAAEjAUoBKwFKAUsBUQFKAUQBIwFLAUQDIgELAUQwAAFEASMBKwFEAUoBdAFK
+        AUQBSgFLASMCIgFEAQsBIjAAASIBIwFLASMBRAErASMBRAFKAUsBIwMiAQsBIjAAAQsBIwFFAiMBTAFz
+        AkQBSgEiASMBIgMLMAAFawGmCmsHDwMOAg8CDgERAWYBDgEPARABEQJDAUoBRAFKAUQBEgERAUQBbgHq
+        AW0QDgFsAWsCBgNrAQYCawUGAWsDDwEOAQ8FDgEPAw4BEQIQAQ8BEAERAUMBFAHqAUsBRQESA+oBbgFt
+        ARUQDgJsAoEBBgKQAYEBBgFrAQYDkAIGAQ4BDwEQAQ4FDwIQAw4BDwERAhABDwEQAUMCRAFFAUwCbgF0
+        A24BEBAOAWYBbAGtAbMBkAG5AZABgQEGAWUBBgOQAbMBBgEOAQACDgRmAeoBZgFsARACDgENAhEDEAER
+        ARUBRAFuAUwBaAFuAUQCbgEUAQ8QDgHrAWwDkAKzAQYBawFlAQYCuQGQAbMBgQERAQ8CDgHqAWYBRAFn
+        AUMBFAEVAQ8CDgEPARABEQFDAREBQwIRAUQBbgJMAeoBRAJuARABDwoOAQ8FDgNKAUgBBgFwAXECSAFJ
+        AYsC6AFJAYsBkAFDARACDgERAWYBEQJEARIB6gFEAQ4BDwERAQ4CEQJDAUQBFQFEAm4BTAESARQBbgEU
+        AQ8BEAcOAQ8IDgFKAusBSAFmAUkBbANJAYsBkQFyAUkBbQFxAQ4BDwEQAQ8CEQEQAWYB6gFuAeoBEQEO
+        AQ0CDgMRAUMCRAESAUsBbgFKAUQBFQFtAQ8BDgEVCA4BDwIOAg8DDgFtAUsBSgFmAWwBcQETAUMBSQGQ
+        AXIB4QG7ARMBbQFKAQ4CDwJmAREBDwFmARUB7QESARAEDgMRARUCRAHqARIBSgESARMBRAEUAQ8BDgFD
+        Bg4BDwEOBQ8DDgHqAesBkQFxAXIBmAHCAXIBSQEQAZEC4gG7AdwB2wEOAQABDwFEAWYCDwFEAYIBjgFu
+        AeoBEAFmAQ8BDgEQAREBQwEVAkQB6gESARMCEgFEARQBEAEOAQ8EDgMPAg0CDwENARADDgFtAfgB6AHc
+        AeIBGQEAAcIBnQFJAZgDAAHcAQACDgFmAkQBEQFEAY4BFgO3ArYBbgGCAREBEAERAUMBFQFEARICEwES
+        ARQCFQERAhAEDgMPARABDQEPAQ4BDwENAw4B6gG7AwAB4gEAAfUBAAF4AcEBAAHhAeIB6AG6AQ8BEAJn
+        AUQBEgGOAYgBjQGOAYgBjgKNAYgBjgIQAhECFQFEAm0B6wETARUBEQESAREBEAQOAw8BDQIPBg4BkAHb
+        AdwB4gEAAuIB9QPiAQABGQHhAegB2wIVAWgBiAHjAY0CZwHqAUQBZwGNAeoBaAKNARABEQEQAhEBQwFE
+        AXMC6gEUAREBEAEUARUBDwQOBA8IDgGzAdsBCQEZAugB4gH1AeIC4QLiARkBuwHbAW0BjQGOAY0BFAER
+        AWcBbQFEAuoBZwEUAa4BggHqBBACEQEVAesBFQEUARUBEQEPAUMBFAEPAw4BDwwOAbMBtAG7AdwB2wEA
+        AdwBGQLhAQACGQHdAQkBugFnAeoBZwEMAg8BRAEPA0QCrgEQBA8CEQEQAhEB6wESARQCEAEVAkMRDgGt
+        AbMBtALVAdsB6AHcA+EBGQHwARkBCQHbBA8BDgIPAg4BDAEPAQ4BFAEMAQ8BDgEQAQ8BEAERARACEQHq
+        ARUDDgIVAREBDxAOAYsBrQGzArQB2wEAAeACGQHwAbwBGQEJAboBkAYLAQ4JCwEPBhABFAEPAw4BDwIO
+        AQ8QDgFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP//wACAAs=
+</value>
+  </data>
   <metadata name="imageListBlocks.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>220, 17</value>
+  </metadata>
+  <data name="imageListBlocks.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAW
+        FQAAAk1TRnQBSQFMAgEBCwEAARgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABesC7QT4A+sC+AEO
+        AgABDgIAAQ4BEQEOBwABEgIUAeoBEwESAW0B6wESARQCEwHqAhQBEhAAA/gF6wL4Au0B+ALrAfgBAAER
+        AgABDgEAARECAAIOBQABQwEUAeoBFQFDARUBEgEVARMBFQEUAUMBFQHqARQBQxAAAfgB7QHrARkB6AL4
+        AusC6AHrAvgC7QIRAQ4EAAMOBAABEQEAAW0BQwEUARIC6wFtAxIC6wESARQBQwFtEAAB+AfrARkB/wEZ
+        AlwB6AHrAfgBAAJDAQ4BAAMOAREBQwEQAQABDgFDAQ4BAAEVARMBFQHqARMBFAEVAeoBEwIVARMB6gEV
+        ARMBFRAAAesD+AHrA/gC7QHsARkB6ALtAesBAAEOAgABDgIAAQ4BAAJDAREEDgETARQB+AHrARQB6gET
+        ARQBQwEUAeoBFAHrAfgBFAETEAAC+AHtAesBXALtA+sD7QP4AQ4GAAEOBAABDgIAAREBEwHqBBMBFAFt
+        AesCFAETAW0BEwEUARMQAAH4BusBGQPoA+sB7QH4AUMBDgIAAQ4BAAIRAQ4CAAEOAQABDgIAARMBQwHq
+        AUMCEwEVARMBEgHqARMCFAETARUBExAAAewBGQFcAesB7QHrAfgB7AH/ARkG7QERAQABQwERAw4CEQMA
+        AREDDgFtARQBEwEVARQBEgETAeoBFAFtARIB6gETARQBFQETEAAB+AHsAfgL6wL4AgABDgFDAg4BAAEO
+        BQABQwERAQABEwHrAUMBbQEUARIBFQEUARIBEwFtAhIBFAHqARMQAALtAewB/wEZAlwB6AL4AVwB6APt
+        AesCDgEAAQ4BEQJDARECAAERBQABEwFtARMBQwITARQBFQESARUCEgFtARMBQwESEAAC6wH4AuwB/wEZ
+        AesB+AHrAf8BGQPrAfgDDgIAAQ4EAAFDARAEAAETARIB6wHqARUBFAFDAeoB6wIUAhIB6gISEAAB+ALt
+        B+sF7QHrAQABEQMOCwABEgETARUBQwESAeoBEwEUAUMBFAESARQBEgH4AeoBExAAAfgB7QP4AesB7AEZ
+        AegB+AXrAfgBAAFDARECDgERAQABDgEAAQ4DAAEOAgACFAHqARMBQwIVAeoBEwEVAUMBFAESAUMB6wEV
+        EAAB+APrAVwD6wHtAesB+AHsARkBXAL4AgACQwERAgACEQIOAQABDgERAgAB6wHqAhIB6gHrAW0DEgHr
+        ARIBQwETARIB+BAAAvgG7QHrA+0B6wL4AesDAAEOAQABDgIAAUMBDgIAAREBQwEOAQABFQHqAhUBFAEV
+        ARIBFQETARUBFAFDARMBbQERARUQAAH4BOsB+ALtAesB7QH4BOsB+AYAAQ4CAAFDARECAAERAUMBEQES
+        AusBEwEUARMBbQH4ARICFAETAhQB6gESEAABEgETARQBEwEUAkMDFAJDAhIBbQESBesC7AP4AewC+AHr
+        BfgG6wL4Au0B+ALrAW0D6gESBusD6gLrAW0BEgITAxQCEwEUARMDFAH4AW0C7AH4Ae0B+APrAfgD7QHs
+        BPgB7QHrAcMBWAP4AusCWAHrAvgB7QPrBW0C6wL4AesCbQHrAW0CEgF0AXMBFAETARIBbQJzAxQB+AFt
+        AuwB+AEcAe0C+AHrAfgCHAXtAfgH6wHtAaAB/wGgAuUBWALrAfgBbQFiAX0C6wJtAjwBbQLrAvgBEgET
+        AhQCQwEUARIBdQEWAnQB+AGQAhQB+AfrAZMCBwGTAhwB7QH4AW0B+ALsAesB+APsAu0B+AHDAXUC7QHr
+        Am0C6wNtAX0B9AF9AnABPAFtAesCbQESAW0BEgITARIB+AHrARIB+AGQARIBQwETAesB+AHsAvgC7AH4
+        Au0B7AHvARwC7QH4AewB+AHtAesB5QLtAewB6wFtAesD7QLsAeoD6wFtA+sB+AHsAesBfQE8AZEB+AHq
+        AvgBbQH4AXUBbQETARQBQwEUAhIDFAESAfgB7AHtAfgBHALtAfgC6wPtAewE+AHsAesBeALsAZIBHAJz
+        AXgC7AH4AewC6wH4AQkBcAL4AW0BEgFtAvgBkQPrARICbQH4AesCbQFyA/gBEgETAxQB+AbrAQcBHAJz
+        AfgC6wLsAfgB7QH4AesB+AHrAfgBBwGgAnoBeQP4Ae0B6wZtAX0DPANtAfgB6wFDAXIBcAUUAboBcgH4
+        Am0CEwFDAe0BkwFzAesB7QHrAfgB7AKZAZIF7QH4AcMB5QFtAe0B6wHsAfgB7QH/AaAF7QHrAXgBCQHq
+        AfgBbQLrAfUBCQGRBfgBEgFtAhIBFAESARMBFAESARQCQwQUAuwB+AXrAfgF6wH4AewD+AfrAW0E6wH4
+        A+sGbQHqBG0C6wNtAboBcgKQAvgBbQGQAfgBEgETAhQD7QEHAxwBkgL4AnMD7QH4Au0B7AH/AaAC5QFZ
+        AXkB+AHsAV4BegPtAewB+AHrAXgBAAI8AWMC6wFrATwD+AHqARIB+AJtARIBugFyAW0B+AFtAZYBkAFt
+        ARIBEwFDAvgB7ALtAZkBBwL4AesCBwHtAfgE6wHsAvgB/wHDAe8B6wH4AesB/wGgA+sCbQPrAfMBYwFt
+        AesBEgHzAYMCbQESAesBFAH4AW0CEgNtAfgDbQESAhQBQwHsAe0B7AHrAfgC7QPrAZIB9wLtAewC+ALt
+        COsF7QHrAvgHbQX4AeoBEwEUAUMBFAJDARQBcgH4AxQCEgJtAewB7QHsAvgB6wH4ARwB7Qj4Ae0D+AHr
+        AewBmQGgAVgB+AbrAfgD6wESAesBAAHKAesFbQHrAW0BEwIUAXUBEgNtARMCFAF0AXMCbQH4AesC+AGS
+        AesB+ALtA/gBkgEcAe0C+AFtAusB5QTrAe0B6wL4AaAB5QH4AesBEgJtAXABCQJtAfgBbQLrAQABcALr
+        ARIBFAETAhQBEgH4A20BEwEUARIC+AFtAvgB7AHtAZIF7AXtA/gH7QHrA+0B6wL4AusG+AFtA/gBEgLr
+        AW0BFAJDARQCEgH4Am0BEgFtARMDEgEUAvgE7ALtAesC7QHsAusD+ATrAewD7QFtAe0B+AXrBOoB6wL4
+        ARIB+AHrBOoB6wH4AesBdAFuAfgBbQH4AeoBbgFLAusC+AHrAUoCGwEIAZkBwwEbAZkBGgEIARoCCAEa
+        ARsCCAXrAuwD+AHsAvgB6wL4BesC7AP4AewC+AHrA/gC6wF0AUoBEgHrAeoBdAHrAW0D6wJuAhoBCAGZ
+        ARsBCAEbARoBCAEaAZkBCAEaAggBGgLsAvgE6wL4A+wD+ALsAfgCbQPrAfgC6wLsA/gG6wJuAesDEgFK
+        AW4BdAFuARoBGwKZAwgBGgEbAhoBGwEaAxsC7AH4AewB6wL4AesC+ALrAvgB7AHtAuwB6wETARQC+ALr
+        ARUBQwHqAusB+AHtAhIB6wFuAusBdAPrAUoB+ALrAW4BcwEaAhsBGgEbAQgBGgKZAhsB8AEbAhoBCAH4
+        B+sC7QH4A+sD+AfrAxMBFQFDARUBbQL4AusBbgHrAW4B6wFuAesBbgHqAUQB6wFuAesB6gEIARoBGwGZ
+        BxsBwwEbAggBmQHrAfgB7AH4AesC7AH4Au0D7ALtAfgB6wH4AewB+AHrAuwB+ALtAewBEgEVAesB7QH4
+        AesB+AHrAXMB6wFuAXQBbgHrAXMBdAFtAesBbgHsAfgBGwKZARoBmQEaAfACGgHDARoCGwHzAhsB+AHs
+        Ae0C6wLtA+sD7QHsA/gB7AHtAesBFALtAesBbQHrAewC7QHsAvgC6wESAesBSgJEAusBbgHrARIBbgEc
+        AW4B+AGZARsBGgMbAZkBCAMbAhoCGwEaAfgG6wH4AesC+APrAuwB+AbrARQDQwFtAusC7AH4AusBbgHr
+        AW4CRAFKAW4C6wH4AW4BSgHqBRoBCAEaARsBCAHDAZkBCAHwARoCGwHsAe0B7AHrAe0B6wP4B+0B6wEV
+        ARQB6wHtAesC+AETARQB+AXtAesB+AF0AXMCbgFEAUoBbgESAfgC6wL4AW4CGwEaAhsBCAEaAcMBGwMI
+        AhsCwwH4AewB+AvrAfgB7AP4BusBbQTrAfgB7AFuBesBSgFzAXQB6wFzAXQC+AHrAfgBmQEaAZkB8AGZ
+        ARoBGwLwAQgBGgHDAxoBGwLtA/gB6wLtBPgB7ALtAfgC7QHrARMBFAMVAvgBEwEVAesC7QH4AW4B6gFu
+        AfgB6wFLARIC6gFKAesBbQFKAusBbgEIARsB8AHDAQgBGgIbAQgCGgMIARsBCAX4AesD+AHrBPgC6wP4
+        AusBFAEVAW0B+AHrARMBFQFtAfgC6wFLAesBbgF0ARIBbgJKAesBEgFKAW4C6wJKAhsGGgMIARsBGgGZ
+        ARsBGgHsAe0B7AfrAewD7QHsAfgB7AHtAewD6wFtA+sC+AHsAe0B7AP4AXMB6wESAW4B6wF0AW4C6wFK
+        AesCbgHrAQgB8AIbAhoBCAEbAZkCCAIaAhsBCAHsAe0B7AL4AesB+AHsCPgB7AHtAewC+AHrAfgBEgET
+        AesG+AFuAusB6gJuAfgBSwFzAkoBbQHqAfgB7QFuARsCGgEbAQgBGwEIARsBmQEbAxoBGwEIARsB+AHr
+        AfgD6wL4Ae0E+AHsA/gB6wH4AesBEgHrAfgBbQLrAvgB6gETAesB+AFLAesB6gFKAUsCSgESAUsBEgLr
+        AfgB7AHrAUoDGgEbAZkDCAEbARoBwwEaARsCCAEaAvgC7AH4BewC7QL4AewD+ALsAesF7ALtAW0B6gHr
+        AfgBbgH4A+sB+APrAeoBSgHrAfgBdALrAQgBGwEaARsBCAHwAQgB8AMaAhsBGgIbAvgE7ALtAesC7QHs
+        AusE+ATsAu0B6wLtAewC6wL4AUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEBBQABgAEBFgAD//8A
+        ggAL
+</value>
+  </data>
+  <metadata name="tmrCountdown.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>386, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
